--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "store",
+  "name": "mart",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,21 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@portabletext/editor": "^1.30.4",
+    "@heroicons/react": "^2.2.0",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.74.0",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^12.2.0",
+    "@sanity/vision": "^3.72.1",
+    "@tailwindcss/typography": "^0.5.16",
+    "framer-motion": "^12.0.6",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "lucide-react": "^0.474.0",
     "next": "14.2.15",
-    "next-sanity": "^9.8.51",
+    "next-sanity": "^9.8.47",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "react-is": "^19.0.0",
-    "sanity": "^3.74.0",
-    "slate": "^0.112.0",
-    "slate-react": "^0.112.1",
-    "styled-components": "^6.1.14"
+    "sanity": "^3.72.1",
+    "styled-components": "^6.1.14",
+    "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
